--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,12 +5,17 @@
 
     <string name="button_save">Speichern</string>
     <string name="button_delete">Löschen</string>
+    <string name="button_register">Anmelden</string>
+    <string name="button_cancel">Abbrechen</string>
 
     <string name="editLabel_item_product">Produkt:</string>
     <string name="editLabel_item_market">Markt:</string>
     <string name="editLabel_item_description">Beschreibung:</string>
 
     <string name="editLabel_market_name">Name des Marktes:</string>
+
+    <string name="dialog_register_label">Anmeldeinformationen:</string>
+    <string name="dialog_register_hint">Benutzerkennung eingeben</string>
 
     <string name="action_new">Neu</string>
     <string name="action_sync">Abgleich</string>
@@ -22,5 +27,6 @@
     <string name="hello_world">Hello world!</string>
     <string name="title_activity_market_edit">MarketEdit</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_register_user">RegisterUser</string>
 
 </resources>
