--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,12 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_register_user">RegisterUser</string>
 
+    <string name="market_list_forBuy">Wo kaufen wir ein?</string>
+    <string name="market_list_forEdit">Bevorzugter Markt</string>
+
+    <string name="market_edit_modify">Marktdaten ändern</string>
+    <string name="market_edit_create">Markt anlegen</string>
+
+    <string name="product_edit_modify">Produktdaten ändern</string>
+    <string name="product_edit_create">Produkt anlegen</string>
 </resources>
