--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,11 +17,13 @@
     <string name="dialog_register_label">Anmeldeinformationen:</string>
     <string name="dialog_register_hint">Benutzerkennung eingeben</string>
 
+    <string name="editSelect_item_nomarket">(Egal)</string>
+    <string name="editSelect_item_nobuy">(nicht eingekauft)</string>
+
     <string name="action_new">Neu</string>
     <string name="action_sync">Abgleich</string>
     <string name="action_logon">Anmelden</string>
     <string name="action_start">Einkaufen</string>
-    <string name="editSelect_item_nomarket">(Egal)</string>
     <string name="title_activity_product_edit">ProductEdit</string>
     <string name="title_activity_market_list">MarketList</string>
     <string name="hello_world">Hello world!</string>
@@ -29,7 +31,10 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_register_user">RegisterUser</string>
 
-    <string name="market_list_forBuy">Wo kaufen wir ein?</string>
+    <string name="product_prefix_market">%2$s: %1$s</string>
+    <string name="product_suffix_bought">%1$s (bei %2$s)</string>
+
+    <string name="market_list_forBuy">Gekauft bei</string>
     <string name="market_list_forEdit">Bevorzugter Markt</string>
 
     <string name="market_edit_modify">Marktdaten ändern</string>
