Can now select category using list selector.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,4 +51,7 @@
     <string name="error_title_rest">Web Zugriff</string>
     <string name="error_sync">Zurzeit ist eine Synchronisation leider nicht möglich.</string>
     <string name="error_ok">Schade</string>
+
+    <string name="group_title">Gruppe auswählen</string>
+    <string name="group_no_group">(ohne Gruppe)</string>
 </resources>
