--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,6 +36,7 @@
     <string name="action_logon">Anmelden</string>
     <string name="action_sortmarket">Gruppieren</string>
     <string name="action_category">Gruppenfilter</string>
+    <string name="action_copy_category">Gruppe übernehmen</string>
 
     <string name="product_prefix_market">%2$s: %1$s</string>
     <string name="product_suffix_bought">%1$s (bei %2$s)</string>
